--- a/src/main/java/fr/diginamic/openfoodfacts/views/FrameOpenFoodFacts.form
+++ b/src/main/java/fr/diginamic/openfoodfacts/views/FrameOpenFoodFacts.form
@@ -116,7 +116,7 @@
             <Component class="javax.swing.JTable" name="jTable2">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="new ModelProduits(&quot;***&quot;, &quot;***&quot;)" type="code"/>
+                  <Connection code="MainController.createModelProduits(&quot;***&quot;, &quot;***&quot;)" type="code"/>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="1"/>
@@ -132,7 +132,7 @@
         <Component class="javax.swing.JComboBox" name="jcbCategories">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new ModelCategories()" type="code"/>
+              <Connection code="MainController&#xd;&#xa;.createModelCategories()" type="code"/>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
@@ -147,7 +147,7 @@
         <Component class="javax.swing.JComboBox" name="jcbMarques">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new ModelMarques()" type="code"/>
+              <Connection code="MainController&#xd;&#xa;.createModelMarques()" type="code"/>
             </Property>
           </Properties>
           <AuxValues>
